@@ -5,28 +5,29 @@ from plone.app.layout.viewlets.common import ViewletBase
 
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 
+
 class BuyViewlet(ViewletBase):
     index = ViewPageTemplateFile('buy.pt')
-    
+
     def update(self):
-        ViewletBase.update(self)
+        super(BuyViewlet, self).update()
         self.product_view = getMultiAdapter((self.context, self.request), name=u'view')
-    
+
     @property
     @memoize
     def product(self):
         return self.product_view.product
-    
+
     @property
     @memoize
     def price(self):
         return self.product_view.price
-    
+
     @property
     @memoize
     def base_price(self):
         return self.product_view.base_price
-    
+
     @property
     @memoize
     def variations(self):
@@ -42,5 +43,3 @@ class BuyViewlet(ViewletBase):
             type['variations'] = variations
             types.append(type)
         return types
-    
-    
